--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-    "name": "angular-event-component",
-    "version": "1.0.0",
-    "description": "use Angular 1.5 component feature + RxJs",
-    "main": "server/app.js",
-    "dependencies": {
-        "bower": "^1.7.9",
-        "express": "^4.13.4",
-        "gulp": "^3.9.1",
-        "gulp-babel": "^6.1.2",
-        "gulp-concat": "^2.6.0",
-        "gulp-sourcemaps": "^2.0.0-alpha",
-        "run-sequence": "^1.1.5"
-    },
-    "devDependencies": {},
-    "scripts": {
-        "start": "node server/app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/MatteoWebDesigner/angular-event-component.git"
-    },
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/MatteoWebDesigner/angular-event-component/issues"
-    },
-    "homepage": "https://github.com/MatteoWebDesigner/angular-event-component#readme"
+  "name": "angular-event-component",
+  "version": "1.0.0",
+  "description": "use Angular 1.5 component feature + RxJs",
+  "main": "server/app.js",
+  "dependencies": {
+    "bower": "^1.7.9",
+    "express": "^4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "node-inspector": "^0.12.8",
+    "nodemon": "^1.9.1",
+    "run-sequence": "^1.1.5"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node ./server/app.js",
+    "debug": "node-inspector & nodemon --debug ./server/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MatteoWebDesigner/angular-event-component.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MatteoWebDesigner/angular-event-component/issues"
+  },
+  "homepage": "https://github.com/MatteoWebDesigner/angular-event-component#readme"
 }
