--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.5"
+    "angular": "^1.5.5",
+    "lodash": "^4.11.2",
+    "moment": "^2.13.0",
+    "rxjs": "^4.1.0"
   }
 }
