--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
+    "lodash": "^4.11.1",
     "node-inspector": "^0.12.8",
     "nodemon": "^1.9.1",
     "run-sequence": "^1.1.5"
