--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "lodash": "^4.11.1",
     "node-inspector": "^0.12.8",
     "nodemon": "^1.9.1",
+    "postcss-cssnext": "^2.5.2",
     "postcss-inline-comment": "^3.0.0",
-    "run-sequence": "^1.1.5"
+    "run-sequence": "^1.1.5",
+    "stylelint": "^6.5.1"
   },
   "devDependencies": {},
   "scripts": {
