--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "bower": "^1.7.9",
+    "cssnano": "^3.6.2",
+    "doiuse": "^2.3.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
@@ -16,6 +18,7 @@
     "gulp-postcss": "^6.1.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "lodash": "^4.11.1",
+    "mdcss": "^1.5.2",
     "node-inspector": "^0.12.8",
     "nodemon": "^1.9.2",
     "postcss-cssnext": "^2.5.2",
