--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.9.2",
     "postcss-cssnext": "^2.5.2",
     "postcss-inline-comment": "^3.0.0",
+    "postcss-mixins": "^4.0.2",
     "run-sequence": "^1.1.5",
     "stylelint": "^6.5.1"
   },
