--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "^1.5.5",
     "lodash": "^4.11.2",
     "moment": "^2.13.0",
-    "rxjs": "^4.1.0"
+    "rxjs": "^4.1.0",
+    "normalize-css": "^4.1.1"
   }
 }
