--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "lodash": "^4.11.2",
     "moment": "^2.13.0",
     "rxjs": "^4.1.0",
-    "normalize-css": "^4.1.1"
+    "normalize-css": "^4.1.1",
+    "flexboxgrid": "^6.3.0"
   }
 }
