--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "use Angular 1.5 component feature + RxJs",
   "main": "server/app/main.js",
   "dependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "body-parser": "^1.15.1",
     "bower": "^1.7.9",
     "cssnano": "^3.6.2",
@@ -16,7 +17,9 @@
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.1",
     "gulp-postcss": "^6.1.1",
+    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-uglify": "^1.5.3",
     "lodash": "^4.11.1",
     "mdcss": "^1.5.2",
     "mongoose": "^4.4.19",
