--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-postcss": "^6.1.1",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.0.0-alpha",
