--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,6 @@
     "lodash": "^4.11.2",
     "moment": "^2.13.0",
     "rxjs": "^4.1.0",
-    "normalize-css": "^4.1.1",
-    "flexboxgrid": "^6.3.0"
+    "bootstrap": "^3.3.6"
   }
 }
