--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node ./server/app/main.js;",
-    "start-db": "mongod --dbpath ./data/db;",
+    "start-db": "mongod --dbpath ./db;",
     "debug": "node-inspector --web-port=14573 & nodemon --debug ./server/app/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
