--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-es2015": "^6.9.0",
     "body-parser": "^1.15.1",
     "bower": "^1.7.9",
+    "css-mqpacker": "^5.0.1",
     "cssnano": "^3.6.2",
     "doiuse": "^2.3.0",
     "express": "^4.13.4",
@@ -26,6 +27,7 @@
     "node-inspector": "^0.12.8",
     "nodemon": "^1.9.2",
     "postcss-cssnext": "^2.5.2",
+    "postcss-each": "^0.9.3",
     "postcss-mixins": "^4.0.2",
     "run-sequence": "^1.1.5",
     "stylelint": "^6.5.1",
