--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.4.19",
     "node-inspector": "^0.12.8",
     "nodemon": "^1.9.2",
+    "postcss-conditionals": "^2.0.2",
     "postcss-cssnext": "^2.5.2",
     "postcss-each": "^0.9.3",
     "postcss-mixins": "^4.0.2",
