--- a/client/assets/font/config.json
+++ b/client/assets/font/config.json
@@ -17,6 +17,12 @@
       "css": "spin",
       "code": 59393,
       "src": "fontelico"
+    },
+    {
+      "uid": "474656633f79ea2f1dad59ff63f6bf07",
+      "css": "star",
+      "code": 59394,
+      "src": "fontawesome"
     }
   ]
 }
