--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "lodash": "^4.11.2",
     "moment": "^2.13.0",
     "rxjs": "^4.1.0",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-ui-router": "^0.3.1"
   }
 }
