--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
     "lodash": "^4.13.1",
     "mdcss": "^1.5.2",
+    "minimist": "^1.2.0",
     "mongoose": "^4.4.19",
     "mongoose-slug-generator": "^1.0.4",
     "node-inspector": "^0.12.8",
